<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XNote</string>
    <string name="new_note">新记事</string>
    <string name="edit_note">编辑记事</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete">确认删除</string>
    <string name="confirm_delete_message">确定要删除这篇记事吗？</string>
    <string name="add_image">插入图片</string>
    <string name="add_audio">插入音频</string>
    <string name="add_attachment">挂入附件</string>
    <string name="record_audio">录音</string>
    <string name="play_audio">播放</string>
    <string name="pause_audio">暂停</string>
    <string name="stop_recording">停止录音</string>
    <string name="permission_required">需要权限</string>
    <string name="audio_permission_required">需要录音权限来录制音频</string>
    <string name="storage_permission_required">需要存储权限来保存文件</string>
    <string name="camera_permission_required">需要相机权限来拍照</string>
    <string name="grant_permission">授权</string>
    <string name="title_hint">无标题</string>
    <string name="content_hint">开始记录你的想法...</string>
    <string name="image_placeholder">[图片]</string>
    <string name="audio_placeholder">[音频]</string>
    <string name="recording">录音中...</string>
    <string name="duration_format" formatted="false">%02d:%02d</string>
</resources>